@@ -9,10 +9,10 @@ __plugin__ = 'Pakee'
 __author__ = 'pakeeapp@gmail.com'
 __url__ = 'http://code.google.com/p/pakee/'
 __date__ = '01-04-2011'
-__version__ = '1.0.6'
+__version__ = '1.0.7'
 __settings__ = xbmcaddon.Addon(id='plugin.video.pakee')
 __rooturl__ = 'http://pakee.hopto.org/pakee/pakee.php?id=xbmc&z=9'
-#__rooturl__ = 'http://pakee.hopto.org/pakee/pakee-test.xml?x=5'
+#__rooturl__ = 'http://pakee.hopto.org/pakee/pakee-test.xml?a=5'
 __language__ = __settings__.getLocalizedString
 
 #plugin modes
@@ -191,6 +191,7 @@ def build_show_directory(origurl):
 
 	itemCount=0
 
+	#for testing mast.tv streams (doesn't work as the stream uses .wsx)
 	if origurl == __rooturl__ and 'pakee-test.xml' in __rooturl__:
 		html = open_url("http://www.mast.tv/embed.php?stream=humtv&location=france")
 		match=re.compile('<param name="URL" value="(.+?)">').findall(html)
@@ -210,6 +211,15 @@ def build_show_directory(origurl):
 		#url_name = re.compile('<h3><a href="(.+?)">(.+?)</a></h3>').findall(shows)
 		#image = re.compile('class="thumbnail"><img src="(.+?)" /></a>').findall(shows)
 		#plot = common.parseDOM(shows, "p", attrs = { "class": "description" })
+
+	#On live streams page, add the Geo News youtube live feed
+	if 'desistreams.googlecode.com' in origurl:
+		isFolder = False
+		geoguid = 'sOg5KS7M13s'
+		listitem = xbmcgui.ListItem( label = 'Geo News', iconImage = 'http://images.wikia.com/logopedia/images/e/e9/Geo_News.png', thumbnailImage = 'http://images.wikia.com/logopedia/images/e/e9/Geo_News.png' )
+		u = sys.argv[0] + "?mode=" + str(PLUGIN_MODE_PLAY_YT_VIDEO) + "&name=" + urllib.quote_plus( "Geo News" ) + "&url=" + urllib.quote_plus( geoguid ) + "&index=" + str(itemCount)
+		xbmcplugin.addDirectoryItem( handle = int( sys.argv[1] ), url = u, listitem = listitem, isFolder = isFolder )
+
 
 
 	for item in items:
